--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
+body {
+  background-color: #f9f7fe;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 30px;
+}
+
+.Header header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 20px 0;
+}
+
+.Header form {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  color: rgba(0, 0, 0, 0.735);
+  font-size: 14px;
+  padding: 20px 0 0 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+strong {
+  color: #f75282;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+  color: #885df1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container {
+  background: white;
+  border-radius: 20px;
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 30px;
+}
+
+.search-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 15px;
+  width: 80%;
+}
+
+.submit-button {
+  background-color: #885df1;
+  border: none;
+  border-radius: 6px;
   color: white;
+  font-size: 16px;
+  margin-left: 8px;
+  padding: 15px;
+  width: 20%;
 }
 
-.App-link {
-  color: #61dafb;
+.current-city-and-weather {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 0 0 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.current-city {
+  font-size: 36px;
+  font-weight: bold;
+  padding: 20px 0 0 0;
+}
+
+.current-weather {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20px;
+}
+
+.current-emoji {
+  height: 65px;
+  margin-left: 20px;
+  margin-top: 10px;
+  width: 65px;
+}
+
+.current-temperature {
+  font-size: 75px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.current-unit {
+  font-size: 32px;
+  margin-top: 15px;
+}
+
+.current-weather-details {
+  color: #a9a6b4;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  color: black;
+  margin: 60px 0;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+  text-align: center;
+}
+
+.weather-forecast-icon img {
+  text-align: center;
+  width: 85px;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+  text-align: center;
+}
+
+.max-temp {
+  color: #f75282;
+}
+
+.min-temp {
+  color: #f75282;
+  opacity: 0.7;
 }
